# ECE477-SSS

SSS_Firmware/main/: CMakeLists.txt  constants.h  coulomb_counting.c  i2c_functions.c  i2c_functions.h  main.c  occupancy_functions.c  occupancy_functions.h
