idf_component_register(SRCS "main.c"
                            "adc_functions.c"
                            "i2c_functions.c"
                            "occupancy_functions.c"
                            "interrupt_functions.c"
                            "coulomb_counting.c"
                    INCLUDE_DIRS ".")
